# algebra-calculator

./: .gitignore  CMakeLists.txt  CMakeLists_Qt.txt  algebra.cpp  algebra.h  algebra_c_wrapper.cpp  hassediagramwidget.cpp  hassediagramwidget.h  main.cpp  mainwindow.cpp  mainwindow.h
web/: algebra_wrapper.py  app.py
web/static/: app.js  style.css
web/templates/: index.html
